--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ overflow-x: hidden;
 /* BACKGROUND IMG */
 .topimg {
 position: absolute;
-width: 100%;
+width: 1440px;
 height: 960px;
 left: 0px;
 top: 0px;
