--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
 
-body {
+html, body {
 width: 100%;
 height: 4460px;
 top:0;
@@ -13,11 +13,14 @@ overflow-x: hidden;
 /* BACKGROUND IMG */
 .topimg {
 position: absolute;
-width: 1440px;
+width: 100%;
+min-width: 1440px;
 height: 960px;
 left: 0px;
 top: 0px;
 background: url(../img/bkg_1-1.png);
+background-repeat: no-repeat;
+background-size: cover;
 z-index: 1;
 }
 .toTheTop {
@@ -59,6 +62,7 @@ top: 828px;
 .rectangle {
 position: absolute;
 width: 100%;
+min-width: 1440px;
 height: 68px;
 left: 0px;
 top: 24px;
@@ -98,7 +102,8 @@ margin-left: 20px;
 /* SERVICES */
 .services {
 position: absolute;
-width: 1440px;
+width: 100%;
+min-width: 1440px;
 height: 711px;
 left: 0px;
 top: 960px;
@@ -248,7 +253,8 @@ background: url(../img/bkg_2-1.png);
 /* PRODUCTS */
 .ourproducts {
 position: absolute;
-width: 1440px;
+width: 100%;
+min-width: 1440px;
 height: 853px;
 left: 0px;
 top: 2242px;
@@ -484,7 +490,8 @@ font-weight: bold;
 /* BLACK STRIP */
 .creation {
 position: absolute;
-width: 1440px;
+width: 100%;
+min-width: 1440px;
 height: 254px;
 left: 0px;
 top: 3899px;
