--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ html, body {
 .services {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background: #383838;
 }
 .greytitle {
@@ -153,9 +153,9 @@ html, body {
     width: 100%;
     background: #ffffff;
     display: flex;
-    height: 60vh;
+    height: auto;
     justify-content: center;
-    padding-top: 80px;
+    padding: 80px 0;
 }
 .sometext {
     margin-left: 80px;
@@ -266,10 +266,11 @@ html, body {
 }
 .download_button {
     width: 350px;
+    height: 60px;
     box-sizing: border-box;
     border: 3px solid #FFFFFF;
     border-radius: 0px;
-    margin: 90px 40% 0 40%;
+    margin: 90px 40% 0;
 }
 .p13 {
     font-weight: 500;
@@ -509,6 +510,15 @@ input[type=text]::placeholder, input[type=email]::placeholder, input[type=tel]::
     }
     .nav div.main_list ul li a{
         padding-right: 2rem;
+    }
+    .box {
+        padding: 30px;
+    }
+    #download {
+        margin: 90px 33% 0;
+    }
+    .ourproducts {
+        height: 120vh;
     }
 }
 @media screen and (max-width: 857px) {
