--- a/css/main.css
+++ b/css/main.css
@@ -626,7 +626,7 @@ input[type=text]::placeholder, input[type=email]::placeholder, input[type=tel]::
     .aboutus {
         flex-direction: column-reverse;
         height: auto;
-        margin: 0 20px;
+        padding: 20px 0 0 20px;
     }
     .sometext {
         margin: 0 auto;
@@ -634,8 +634,8 @@ input[type=text]::placeholder, input[type=email]::placeholder, input[type=tel]::
     .img2 {
         height: 250px;
         background-size: cover;
-        width: 90vw;
         margin-bottom: 1em;
+        width: 90vw;
     }
     .p8 {
         width: 90vw;
